# IIITH-assignment

./: README.md
install/mobile_manipulator_body/share/mobile_manipulator_body/: arm_gazebo_control.launch.py  package.bash  package.dsv  package.ps1  package.zsh  rviz.launch.py
install/mobile_manipulator_body/share/mobile_manipulator_body/sdf/: arm.sdf
install/mobile_manipulator_body/share/mobile_manipulator_body/urdf/: frames.gv
src/mobile_manipulator_body/: CMakeLists.txt  package.xml
src/mobile_manipulator_body/config/: control.yaml
src/mobile_manipulator_body/launch/: arm_gazebo_control.launch.py
src/mobile_manipulator_body/rviz/: robot_arm.rviz
src/mobile_manipulator_body/sdf/: arm.sdf
