<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_manipulator_body</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ashy@todo.todo">ashy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Add Gazebo dependencies -->
  <depend>gazebo_ros</depend>
  <depend>ros-humble-gazebo-ros-pkgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path = "/home/ashy/iith_ws/install/mobile_manipulator/share/mobile_manipulator_body/model/"/>
  </export>
</package>

